# view-image

./: .gitignore  build.sh  i18n.py  main.py  pyproject.toml  requirements.txt  run.sh
scripts/: flet_build_with_openfile.py
