[project]
name = "ed-image-preview"
version = "1.0.0"
description = "Ed Image Preview — visualizador de imagens (Flet)"
requires-python = ">=3.10"
dependencies = []
# Dependências reais: requirements.txt (o flet build prioriza esse ficheiro).

[tool.flet]
product = "Ed Image Preview"
artifact = "Ed Image Preview"
copyright = "Copyright (c) 2026 Edimar Barbosa. All rights reserved."
# Não empacotar a venv nem artefactos de build — só o código e assets.
# Sem isto, o zip inclui .venv inteiro e o .app pode parecer «antigo» ou enorme.
app.exclude = [
  ".venv",
  "build",
  ".git",
  ".DS_Store",
  "__pycache__",
]
